--- a/package.json
+++ b/package.json
@@ -4,21 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.ts",
+    "start": "ts-node server.ts",
     "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.2.1",
+    "axios": "^1.6.2",
     "express": "^4.18.2",
-    "mongoose": "^6.7.5",
+    "mongoose": "^6.12.3",
     "nock": "^13.4.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
     "@types/mocha": "^10.0.6",
+    "@types/mongoose": "^5.11.97",
     "@types/supertest": "^2.0.16",
     "jest": "^29.7.0",
     "mocha": "^10.2.0",
